[project]
name = "open-hummingbird-eval"
version = "1.0.0"
description = "A library to evaluate the effectiveness of spatial features acquired from a vision encoder on a training dataset, to associate themselves to relevant features from a dataset (validation), through the utilization of a k-NN classifier/retriever."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pip>=25.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Defines the targets for the wheel build.
include = ["hbird/**"]